# ArrowQuery

./: .gitignore  ArrowPoC.sln  README.md  build-pipeline.ps1
ArrowQuery.Interop/: ArrowQuery.Interop.csproj  ArrowQuery.Interop.nuspec  ArrowQuery.snk  ArrowQueryInterop.cs  ArrowTable.cs
ArrowQuery.Sample/: ArrowQuery.Sample.csproj  Program.cs
arrow_query/: Cargo.toml
arrow_query/src/: arrow_database.rs  arrow_table.rs  lib.rs
