[package]
name = "arrow_query"

[lib]
crate-type = ["cdylib"]
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["runtime-rng"] }
arrow = { version = "54.2.1", features = ["ipc", "prettyprint"] }                                       # data-fusion 46.0.1 depens on arrow 54.2.1
arrow-array = { version = "54.2.1", default-features = false, features = ["chrono-tz"] }
arrow-buffer = { version = "54.2.1", default-features = false }
arrow-cast = { version = "54.2.1", default-features = false }
arrow-json = { version = "54.2.1", default-features = false }
arrow-ord = { version = "54.2.1", default-features = false }
arrow-schema = { version = "54.2.1", default-features = false, features = ["serde"] }
async-trait = "0.1.73"
bytes = "1.4"
chrono = "0.4.38"
clap = { version = "4.5.32", features = ["derive"] }
csv = "1.1.6"
datafusion = "46.0.1"
datafusion-common = "46.0.0"
datafusion-datasource = "46.0.1"
datafusion-execution = "46.0.1"
datafusion-expr = "46.0.1"
datafusion-functions = "46.0.1"
datafusion-functions-aggregate = "46.0.1"
datafusion-functions-nested = "46.0.1"
datafusion-optimizer = "46.0.1"
datafusion-physical-expr = "46.0.1"
datafusion-physical-expr-common = "46.0.1"
datafusion-sql = "46.0.1"
futures = "0.3"
glob = "0.3.1"
half = { version = "2.2.1", default-features = false }
hashbrown = { version = "0.14.5", features = ["raw"] }
itertools = "0.14"
log = "^0.4"
once_cell = "1.0.0"
rand = "0.9.0"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.54.0"
tempfile = "3.19.1"
timely = "=0.15.0"
timely_communication = "=0.15.0"
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7.14"
toml = "0.8.20"
